--- a/primary-with-transitive-peer/package.json
+++ b/primary-with-transitive-peer/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "transitive-with-peer": "file:///Users/jvivian/code/deeplink/npm-peer-dependency-bug/transitive-with-peer",
-    "peer": "file:///Users/jvivian/code/deeplink/npm-peer-dependency-bug/peer"
+    "transitive-with-peer": "file://../transitive-with-peer",
+    "peer": "file://../peer"
   }
 }
